<resources>
    <string name="app_name">Feeling</string>
    <string name="name_edit">Name</string>
    <string name="mood_button">Mood</string>
    <string name="feeling"></string>
    <string-array name="moods">
        <item>happy</item>
        <item>sad</item>
        <item>mad</item>
        <item>excited</item>
    </string-array>
    <string name="toggle_on">positive</string>
    <string name="toggle_off">negative</string>
    <string name="meditate_switch">Meditate</string>
    <string name="story">Story</string>
    <string name="story1_radio">Hatha</string>
    <string name="story2_radio">Bikram</string>
    <string name="story3_radio">Prana</string>
    <string name="enlightened_check">enlightened</string>
    <string name="conservative_check">conservative</string>
    <string name="sarcastic_check">sarcastic</string>
    <string name="secretive_check">secretive</string>
</resources>
